RESOLVED FIXED86391
[BlackBerry] ASSERT failure in FrameView::paintContents when refleshing www.thestar.com/iphone
https://bugs.webkit.org/show_bug.cgi?id=86391
Summary [BlackBerry] ASSERT failure in FrameView::paintContents when refleshing www.t...
Jacky Jiang
Reported 2012-05-14 12:16:25 PDT
Steps to reproduce: 1. Open www.thestart.com/iphone on latest debug build browser. 2. Reflesh it several times. Assert failure: Program received signal SIGSEGV, Segmentation fault. 0x7d08a484 in WebCore::FrameView::paintContents (this=0xac5100, p=0x7ff940, rect=...) at /Users/zhajiang/dev/webkit/Source/WebCore/page/FrameView.cpp:3053 3053 ASSERT(!needsLayout()); (gdb) bt #0 0x7d08a484 in WebCore::FrameView::paintContents (this=0xac5100, p=0x7ff940, rect=...) at /Users/zhajiang/dev/webkit/Source/WebCore/page/FrameView.cpp:3053 #1 0x78d42a64 in BlackBerry::WebKit::BackingStorePrivate::renderContents (this=0x3919b8, drawable=0x7ffa24, scale=0.69999998807907104, contentsRect=...) at /Users/zhajiang/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:2321 #2 0x78d44f80 in BlackBerry::WebKit::BackingStore::drawContents (this=0x2fd908, drawable=0x7ffa24, scale=0.69999998807907104, contentsRect=...) at /Users/zhajiang/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:2916 ...
Attachments
Patch (1.54 KB, patch)
2012-05-14 12:25 PDT, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2012-05-14 12:25:16 PDT
WebKit Review Bot
Comment 2 2012-05-14 13:08:56 PDT
Comment on attachment 141766 [details] Patch Clearing flags on attachment: 141766 Committed r116987: <http://trac.webkit.org/changeset/116987>
WebKit Review Bot
Comment 3 2012-05-14 13:09:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.