[BlackBerry] ASSERT failure in FrameView::paintContents when refleshing www.thestar.com/iphone https://bugs.webkit.org/show_bug.cgi?id=86391

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-05-14
Reviewed by Adam Treat.

PR 156992
Request layout first if needed before painting contents.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::renderContents):

Canonical link: https://commits.webkit.org/103981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116987 268f45cc-cd09-0410-ab3c-d52691b4dbfc